# cofy-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  local.settings.example.json  main.py  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflow/: pre-commit.yml
.github/workflows/: deploy.yml  main_app-cofy-api-dev.yml  main_func-cofy-api-dev.yml  pre-commit.yml  publish.yml  test-container.yml  test.yml  typecheck.yml
demo/: db.py  from_settings.py  main.py  worker.py
demo/data/: basic_gas_tariff.yaml  dynamic_tariff.yaml  energy_cost_tariff.yaml  fixed_day_night_07.yaml  fixed_tariff.yaml  members_example.csv  monthly_index.csv  pro_gas_tariff.yaml  variable_tariff.yaml
demo/db/: generate.py  migrate.py  reset.py  seed.py
demo/members/: load_from_csv.py
specs/: Dependencies.md  Directory structure.md  Multitenant DB setup.md  Multitenant datastructure.canvas  Multitenant plan.md  Multitenant requirements.md  Requirements.md  Usecase 1 - App structure.canvas  Usecase 1 - Requirements.md
src/cofy/: __init__.py  api.py  app.py  cofy_api.py  docs_router.py  enums.py  modules_router.py  token_auth.py  version.py  worker.py
src/cofy/api/: __init__.py  cofy_api.py  debug_middleware.py  debug_router.py  docs_router.py  from_settings_mixin.py  module.py  token_auth.py
src/cofy/db/: __init__.py  cofy_db.py  database_backed_source.py  timestamp_mixin.py
src/cofy/db/alembic/: README  env.py  script.py.mako
src/cofy/jobs/: worker.py
src/cofy/management/: errors.py  main.py
src/cofy/management/api/: __init__.py  modules.py
src/cofy/management/persitance/: __init__.py  modules.py
src/cofy/management/persitance/file/: __init__.py  base.py  modules.py
src/cofy/modules/billing/: __init__.py  module.py
src/cofy/modules/billing/models/: billing_request.py  billing_response.py
src/cofy/modules/directive/: __init__.py  module.py
src/cofy/modules/directive/formats/: directive.py
src/cofy/modules/directive/sources/: directive_source.py  dynamic_boundary_directive_source.py
src/cofy/modules/members/: __init__.py  model.py  module.py  source.py
src/cofy/modules/members/migrations/: members_core_0001_members_core_initial.py
src/cofy/modules/members/models/: db_member.py
src/cofy/modules/members/sources/: csv_source.py  db_source.py  file_source.py
src/cofy/modules/members/tasks/: sync_from_csv.py
src/cofy/modules/production/: __init__.py  module.py
src/cofy/modules/production/sources/: energyID_production.py
src/cofy/modules/tariff/: __init__.py  module.py
src/cofy/modules/tariff/formats/: kiwatt.py
src/cofy/modules/tariff/sources/: energy_cost.py  entsoe_day_ahead.py
src/cofy/modules/timeseries/: __init__.py  format.py  module.py  source.py
src/cofy/modules/timeseries/formats/: csv.py  json.py
src/demo/: database.db  db.py  main.py  worker.py
src/demo/db/: database.db  generate.py  migrate.py  reset.py  seed.py
src/demo/members/: models.py  source.py
src/demo/members/jobs/: example.csv  load_from_csv.py
src/demo/members/migrations/: README.md
src/demo/members/migrations/versions/: 20260217_01_members_initial.py
src/demo/members/sources/: db_source.py
src/modules/members/: model.py  module.py  source.py
src/modules/members/jobs/: eb_load_from_csv.py  eb_load_from_ftp.py  sync_from_csv.py
src/modules/members/migrations/: 537edd2211fa_make_members_email_and_activation_code_.py  README.md
src/modules/members/migrations/versions/: 20260217_01_members_initial.py
src/modules/members/models/: EBMember.py  db_member.py  eb_member.py
src/modules/members/sources/: db_source.py  eb_csv_source.py  eb_db_source.py  eb_members_example.csv
src/modules/members/tasks/: sync_from_csv.py
src/modules/production/: module.py
src/modules/production/sources/: energyID_production.py
src/modules/tariff/: api.py  app.py  model.py  module.py  router.py  source.py
src/modules/tariff/formats/: kiwatt.py
src/modules/tariff/sources/: entsoe_day_ahead.py
src/shared/: module.py
src/shared/timeseries/: format.py  model.py  module.py  source.py
src/shared/timeseries/formats/: csv.py  json.py
tests/cofy/: api_test.py  app_test.py  cofy_api.py  cofy_api_test.py  cofy_db_test.py  dependency_boundary_test.py  docs_router_test.py  dummy_module.py  modules_router_test.py  token_auth_test.py  worker_test.py
tests/cofy/api/: cofy_api_test.py  debug_middleware_test.py  debug_router_test.py  docs_router_test.py  from_settings_mixin_test.py  module_test.py  token_auth_test.py
tests/cofy/db/: cofy_db_test.py
tests/cofy/dumy_migrations/: bar.py  foo.py
tests/cofy/management/api/: modules_test.py
tests/cofy/modules/billing/: module_test.py
tests/cofy/modules/billing/models/: billing_request_test.py  billing_response_test.py
tests/cofy/modules/directive/: module_test.py
tests/cofy/modules/directive/sources/: directive_source_test.py  dynamic_boundary_directive_source_test.py
tests/cofy/modules/members/: module_test.py  source_test.py
tests/cofy/modules/members/sources/: csv_source_test.py  file_source_test.py
tests/cofy/modules/members/tasks/: sync_from_csv_test.py
tests/cofy/modules/production/: module_test.py
tests/cofy/modules/tariff/: dummy_source.py  module_test.py
tests/cofy/modules/timeseries/: dummy_source.py  module_test.py
tests/demo/: members_demo_test.py
tests/mocks/: dummy_module.py
tests/modules/members/: module_test.py
tests/modules/members/sources/: members_db_source_test.py
tests/modules/members/tasks/: sync_from_csv_test.py
tests/modules/production/sources/: energyID_production_example.json  energyID_production_test.py  test_energyID_production.py
tests/modules/tariff/: api_test.py  app_test.py  dummy_source.py  module_test.py  router_test.py
tests/modules/tariff/formats/: kiwatt_test.py
tests/modules/tariff/sources/: entsoe_day_ahead_test.py
tests/shared/: module_test.py
tests/shared/timeseries/: dummy_source.py  module_test.py
tests/shared/timeseries/formats/: csv_test.py
(+8 files in other folders)
