[project]
name = "cofy-api"
authors = [
    { name="EnergyID", email = "info@energieid.be" },
    { name="Jorg" }
]
version = "0.0.0"
description = "An open-source modular framework for ingesting, standardising, storing, and computing energy-related data."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.0.0",
    "starlette>=0.41.0",
]

[project.optional-dependencies]
# Functional extras
worker = ["saq[postgres,web] @ git+https://github.com/tobymao/saq.git@860afaafd2b3e9872f4b439ae030fb24e5d4689e"]
db = [
    "psycopg>=3.3.3",
    "alembic>=1.18.4", 
    "sqlalchemy>=2.0.0"
]

# Module extras
timeseries = [
    "isodate>=0.7.2",
    "narwhals>=2.15.0"
]
tariff = [
    "cofy-api[timeseries]",
    "energy-cost>=0.1.0",
    "entsoe-py>=0.7.10",
    "pandas>=3.0.0"
]
production = [
    "cofy-api[timeseries]",
    "polars>=1.38.1",
    "requests>=2.32.0",
]
members = ["cofy-api[db]"]

# Convenience extras
all = ["cofy-api[worker,db,timeseries,tariff,members,production]"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"cofy.db" = ["alembic/*", "alembic/**/*"]
[dependency-groups]
dev = [
    "cofy-api[all]",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
[tool.poe.env]
PYTHONPYCACHEPREFIX = ".pycache"
[tool.poe.tasks]
lint = "ruff check --fix"
format = "ruff format"
check = "ty check"
[tool.poe.tasks.demo]
cmd = "fastapi dev demo/main.py"
envfile = ".env.local"
[tool.poe.tasks.db]
cmd = "python -m demo.db"
envfile = ".env.local"
[tool.poe.tasks.worker]
cmd = "saq demo.worker.settings"
envfile = ".env.local"
[tool.poe.tasks.test]
cmd = "pytest --cov=cofy --cov-report=term-missing --import-mode=importlib"
[tool.coverage.report]
skip_covered = true
[tool.coverage.run]
source = ["cofy"]
omit = ["src/cofy/modules/*/migrations/*", "src/cofy/db/alembic/*"]
[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", #Line too long
]
