[project]
name = "cofy-api"
authors = [
    { name="EnergyID", email = "info@energieid.be" },
    { name="Jorg" }
]
version = "0.0.0"
description = "An open-source modular framework for ingesting, standardising, storing, and computing energy-related data."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.0.0",
    "starlette>=0.41.0",
]

[project.optional-dependencies]

# Module extras
timeseries = [
    "isodate>=0.7.2",
    "narwhals>=2.15.0"
]
tariff = [
    "cofy-api[timeseries]",
    "energy-cost @ git+https://github.com/EnergieID/energy-cost.git@enhance/optimise",
    "entsoe-py>=0.7.10",
    "pandas>=3.0.0"
]
billing = [
    "cofy-api[timeseries]",
    "energy-cost @ git+https://github.com/EnergieID/energy-cost.git@enhance/optimise",
    "pandas>=3.0.0"
]
production = [
    "cofy-api[timeseries]",
    "polars>=1.38.1",
    "requests>=2.32.0",
]
members = []
directive = [
    "cofy-api[timeseries]",
    "narwhals>=2.15.0"
]
debug = [
    "memray>=1.19.3",
    "pyinstrument>=5.0.0",
]

# Convenience extras
all = ["cofy-api[timeseries,tariff,members,production,directive,billing,debug]"]
[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"cofy.db" = ["alembic/*", "alembic/**/*"]
[dependency-groups]
dev = [
    "cofy-api[all,debug]",
    "pyinstrument>=5.1.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
[tool.poe.env]
PYTHONPYCACHEPREFIX = ".pycache"
[tool.poe.tasks]
lint = "ruff check --fix"
format = "ruff format"
check = "ty check"
[tool.poe.tasks.demo]
cmd = "fastapi dev demo/main.py"
envfile = ".env.local"
[tool.poe.tasks.prod]
shell = """
docker build -t cofy-api .
docker run -p 8080:8080 --env-file .env.local cofy-api
"""
[tool.poe.tasks.test]
cmd = "pytest --cov=cofy --cov-report=term-missing --import-mode=importlib"
[tool.coverage.report]
skip_covered = true
[tool.coverage.run]
source = ["cofy"]
[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", #Line too long
]
